--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,6 +2,9 @@
 <header role="banner">
   <div class="container">
     <h2 id="lp-content" data-i18n="header.heading"></h2>
+
+    <p>Olivier</p>
+
   </div>
 </header>
 <!-- HEADER END -->
