--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -1,7 +1,107 @@
 @use '../theme' as *;
 @use '../utilities' as *;
 
-header {
-  background-color: $headerBackgroundColor;
-  color: $headerTextColor;
+.header {
+  height: 100vh;
+
+  @media #{$ps-desktop} {
+    width: 40%;
+  }
+
+  .container {
+    width: 100%;
+    display: flex;
+
+    .banner-left {
+      width: 30%;
+      justify-content: flex-end;
+      display: flex;
+
+      &__content {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding: 30px 0;
+
+        @media only screen and (max-width: 767px) and (orientation: landscape) {
+          padding: 20px 0;
+        }
+
+        .primaryHeading {
+          text-transform: uppercase;
+          order: 2;
+          color: #000;
+          line-height: 1.0;
+
+
+          writing-mode: tb-rl;
+          transform: rotate(180deg);
+          padding-left: 2px;
+          font-size: 31px;
+          font-weight: 300;
+          .font-bold.actionnaire {
+            font-weight: 600;
+          }
+        }
+
+        .secondaryHeading {
+          text-transform: uppercase;
+          text-align: right;
+          padding-right: 5px;
+          transition: all 0.3s ease-in-out;
+          font-size: 1.1rem;
+          @media only screen and (max-width: 425px) {font-size: 14px;}
+        }
+      }
+
+      &__img {
+        width: 28px;
+        height: 100vh;
+      }
+    }
+
+    .navContainer {
+      .right {
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+
+        .picture {
+          .cover-mob {
+            display: block;
+          }
+          .cover-tablet, .cover-desk {
+            display: none;
+          }
+
+          @media only screen and (min-width: 768px) {
+            .cover-tablet {
+              display: block;
+            }
+
+            .cover-mob, .cover-desk {
+              display: none;
+            }
+          }
+
+          @media #{$ps-desktop} {
+            .cover-desk {
+              display: block;
+            }
+
+            .cover-mob, .cover-tablet {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
 }
