--- a/src/assets/sass/components/_navigation.scss
+++ b/src/assets/sass/components/_navigation.scss
@@ -6,7 +6,6 @@ nav {
   color: $navTextColor;
 }
 
-
 .navContainer {
   z-index: 1;
   width: 70%;
@@ -39,12 +38,11 @@ nav {
     justify-content: center;
     width: 100%;
     position: absolute;
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.08) 100%);
+    background: linear-gradient(180deg, rgba(33,87,129,1) 0%, rgb(33 87 129 / 75%) 60%, rgba(255,255,255,0) 100%);
 
     img {
       display: block;
       width: 50%;
-
       @media (min-width: 425px) and (max-width: 768px) {width: 30%;}
       @media (min-width: 769px) and (max-width: 2400px) {width: 30%;}
     }
@@ -57,7 +55,6 @@ nav {
     justify-content: center;
     width: 100%;
     height: 35%;
-
     @media only screen and (max-width: 767px) and (orientation: landscape) {
       height: 40%;
     }
@@ -82,6 +79,7 @@ nav {
             transition: all 0.3s ease-in-out;
             font-size: 1rem;
             font-weight: 500;
+            font-family: $fontBold;
             &::after {
               position: absolute;
               content:'';
@@ -91,24 +89,29 @@ nav {
               bottom: -5px;
               background-image: url("/src/assets/images/bar-hr.jpg");
             }
-            @media (min-width: 768px) and (max-width: 2560px) {
+            @media (min-width: 768px) and (max-width: 1400px) {
               font-size: 18px;}
+            @media (min-width: 1401px) and (max-width: 2560px) {
+              font-size: 24px;}
           }
+        }
         }
       }
     }
 
     .doc {
-      @media only screen and (max-width: 896px) {
-        margin-bottom: 0px;
-      }
+      font-family: $primaryFont;
 
+      @media only screen and (max-width: 896px) {
+        margin-bottom: 0;
+      }
       @media only screen and (min-width: 916px) {
         margin-bottom: 5px;
       }
-
-      @media (min-width: 768px) and (max-width: 2560px) {
-        font-size: 16px;}
+      @media (min-width: 768px) and (max-width: 1400px) {
+        font-size: 18px;}
+      @media (min-width: 1401px) and (max-width: 2560px) {
+        font-size: 22px;}
     }
 
 
@@ -145,7 +148,7 @@ nav {
       }
 
       .language__list__item {
-        font-family: "LOREAL-Regular",sans-serif;
+        font-family: $primaryFont;
         font-size: 14px;
         a {
           color: #000000;
@@ -177,4 +180,4 @@ nav {
       }
     }
   }
-}
+
