--- a/src/assets/sass/components/_mainContent.scss
+++ b/src/assets/sass/components/_mainContent.scss
@@ -203,7 +203,7 @@ main {
 #panel-3 {
   background-image: url("/src/assets/images/tab-3.jpg");
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: right;
 }
 #panel-4 {
   background-image: url("/src/assets/images/tab-4-h.png");
