--- a/src/partials/sections/tabpanel.html
+++ b/src/partials/sections/tabpanel.html
@@ -28,22 +28,22 @@
 
     <div class="tabContent" id="panel-1" role="tabpanel" aria-labelledby="tab-1">
         <a target-page="2" class="tabContent__link content-link-1 tabContent__link-0" aria-label="Consultez Performance & actualités" tabindex="-1">
-            <p class="tabContent__link__text" aria-hidden="true">Consultez</p>
+            <p class="tabContent__link__text" aria-hidden="true" data-i18n="tabpanel.p"></p>
         </a>
     </div>
     <div class="tabContent" id="panel-2" role="tabpanel"  aria-labelledby="tab-2">
         <a target-page="4" class="tabContent__link content-link-2 tabContent__link-1" aria-label="Consultez Vivatech 2022 - L’Oréal dévoile sa vision du futur de la beauté" tabindex="-1">
-            <p class="tabContent__link__text" aria-hidden="true">Consultez</p>
+            <p class="tabContent__link__text" aria-hidden="true" data-i18n="tabpanel.p"></p>
         </a>
     </div>
     <div class="tabContent" id="panel-3" role="tabpanel" aria-labelledby="tab-3">
         <a target-page="6" class="tabContent__link content-link-3 tabContent__link-2" aria-label="Consultez Retour sur le e-salon boursolive" tabindex="-1">
-            <p class="tabContent__link__text" aria-hidden="true">Consultez</p>
+            <p class="tabContent__link__text" aria-hidden="true" data-i18n="tabpanel.p"></p>
         </a>
     </div>
     <div class="tabContent" id="panel-4" role="tabpanel" aria-labelledby="tab-4">
         <a target-page="8" class="tabContent__link content-link-4 tabContent__link-3" aria-label="Consultez L’Oréal et vous, cours de bourse et contacts" tabindex="-1">
-            <p class="tabContent__link__text" aria-hidden="true">Consultez</p>
+            <p class="tabContent__link__text" aria-hidden="true" data-i18n="tabpanel.p"></p>
         </a>
     </div>
 </section>
